# PDF-table-extraction

./: .gitignore  AGENTS.md  pyproject.toml
src/table_extraction/: __init__.py  cell_extraction.py  grid_detection.py  io.py  ocr.py  paddle_ocr.py  preprocessing_debug.py  table_assembly.py  visualization.py  vlm_fallback.py  workflow.py
